--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,15 @@ plugins {
 }
 
 group 'dev.nova'
-version '1.0 RELEASE'
+version '1.1-RELEASE'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 test {
